source3/utils/ntlm_auth.c
@@ -293,7 +293,7 @@ static char winbind_separator(void)
 
 	if (winbindd_request_response(NULL, WINBINDD_INFO, NULL, &response) !=
 	    NSS_STATUS_SUCCESS) {
-		d_printf("could not obtain winbind separator!\n");
+		d_fprintf(stderr, "could not obtain winbind separator!\n");
 		return *lp_winbind_separator();
 	}
 
@@ -301,7 +301,7 @@ static char winbind_separator(void)
 	got_sep = True;
 
 	if (!sep) {
-		d_printf("winbind separator was NULL!\n");
+		d_fprintf(stderr, "winbind separator was NULL!\n");
 		return *lp_winbind_separator();
 	}
 
@@ -495,7 +495,7 @@ static bool check_plaintext_auth(const char *user, const char *pass,
 
 	if (stdout_diagnostics) {
 		if ((result != NSS_STATUS_SUCCESS) && (response.data.auth.nt_status == 0)) {
-			d_printf("Reading winbind reply failed! (0x01)\n");
+			d_fprintf(stderr, "Reading winbind reply failed! (0x01)\n");
 		}
 
 		d_printf("%s: %s (0x%x)\n",
